<resources>
    <string name="app_name">myHearthstoneWorkshop</string>
    <string name="main_title">Hearthstone</string>
    <string name="news">Les dernières news</string>
    <string name="mesDecks">Mes decks</string>
    <string name="newDeck">+ Créer un Deck</string>
    <string name="deckCreation">Création de deck</string>
    <string name="chooseClass">Choisis ta class</string>
    <string name="mydeck">Mes decks</string>
    <string name="chooseName">Nom de mon deck</string>
    <string name="neutral">Cartes neutres</string>
    <string name="classCard">Cartes de class</string>
    <string name="defaultCost">1</string>
    <string name="defaultText">Mon text</string>
</resources>
